src/main/default/objects/Ticket_Item__c/Ticket_Item__c.object-meta.xml
<CustomObject>
    <label>Ticket Item</label>
    <nameField>
        <displayFormat>TI-{0}</displayFormat>
        <label>Ticket Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ticket Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>