src/main/default/objects/Ticket_Item__c/fields/AllowOverride__c.field-meta.xml
<CustomField>
    <fullName>AllowOverride__c</fullName>
    <formula>OR( NOT(ISBLANK( Price_Book_Item__r.Override_Price_Method__c )) , NOT(ISBLANK( Price_Book_Item__r.Override_Cost_Method__c )) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AllowOverride</label>
    <type>Checkbox</type>
</CustomField>