src/main/default/objects/Ticket_Item__c/fields/Auto_Added__c.field-meta.xml
<CustomField>
    <fullName>Auto_Added__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This property indicates that the item was automatically added to the ticket.</description>
    <inlineHelpText>If selected, the item was added to the ticket automatically. An item gets added to a ticket automatically if the linked price book item has a default quantity or the linked price book item has a parent price book item.</inlineHelpText>
    <label>Auto Added</label>
    <type>Checkbox</type>
</CustomField>