src/main/default/objects/Ticket_Item__c/fields/Catalog_Classification__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Classification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Catalog classification for the ticket item. The ticket item inherits this classification from the linked catalog item.</inlineHelpText>
    <label>Catalog Classification</label>
    <referenceTo>Classification__c</referenceTo>
    <relationshipLabel>Ticket Items</relationshipLabel>
    <relationshipName>Ticket_Items</relationshipName>
    <type>Lookup</type>
</CustomField>