src/main/default/objects/Ticket_Item__c/fields/Catalog_Item__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Item__c</fullName>
    <formula>CASESAFEID(Price_Book_Item__r.Catalog_Item__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Catalog Item</label>
    <type>Text</type>
</CustomField>