src/main/default/objects/Ticket_Item__c/fields/Catalog_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Record_Type__c</fullName>
    <inlineHelpText>Catalog record type for the ticket item. The ticket item inherits this record type from the linked catalog item.</inlineHelpText>
    <label>Catalog Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>