src/main/default/objects/Ticket_Item__c/fields/Catalog_Track_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Track_Inventory__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, users can add the linked catalog item to a warehouse to track its inventory levels.</inlineHelpText>
    <label>Catalog Track Inventory</label>
    <type>Checkbox</type>
</CustomField>