src/main/default/objects/Ticket_Item__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Contact linked to the ticket item.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Ticket Items</relationshipLabel>
    <relationshipName>Ticket_Items</relationshipName>
    <type>Lookup</type>
</CustomField>