src/main/default/objects/Ticket_Item__c/fields/Cost_Plus_Markup_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cost_Plus_Markup_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Dollar amount that the ticket item is marked up. The ticket item inherits this amount from the linked price book item.</inlineHelpText>
    <label>Cost Plus Markup Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>