src/main/default/objects/Ticket_Item__c/fields/Cost_Plus_Markup_Percent__c.field-meta.xml
<CustomField>
    <fullName>Cost_Plus_Markup_Percent__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Percentage that the ticket item is marked up. The ticket item inherits this amount from the linked price book item.</inlineHelpText>
    <label>Cost Plus Markup Percent</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>