src/main/default/objects/Ticket_Item__c/fields/Date_End__c.field-meta.xml
<CustomField>
    <fullName>Date_End__c</fullName>
    <inlineHelpText>Date and time that work finished on the ticket item.</inlineHelpText>
    <label>Date End</label>
    <type>DateTime</type>
</CustomField>