src/main/default/objects/Ticket_Item__c/fields/Date_Start__c.field-meta.xml
<CustomField>
    <fullName>Date_Start__c</fullName>
    <inlineHelpText>Date and time that work started on the ticket item.</inlineHelpText>
    <label>Date Start</label>
    <type>DateTime</type>
</CustomField>