src/main/default/objects/Ticket_Item__c/fields/Desired_Stage_Price__c.field-meta.xml
<CustomField>
    <fullName>Desired_Stage_Price__c</fullName>
    <inlineHelpText>Discounted price for all items included in the stage.</inlineHelpText>
    <label>Desired Stage Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>