src/main/default/objects/Ticket_Item__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Equipment record linked to the ticket item.</inlineHelpText>
    <label>Equipment</label>
    <referenceTo>Equipment__c</referenceTo>
    <relationshipLabel>Ticket Items</relationshipLabel>
    <relationshipName>Ticket_Items</relationshipName>
    <type>Lookup</type>
</CustomField>