src/main/default/objects/Ticket_Item__c/fields/Input_Qty__c.field-meta.xml
<CustomField>
    <fullName>Input_Qty__c</fullName>
    <inlineHelpText>Quantity of the ticket item added to the ticket.</inlineHelpText>
    <label>Input Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>