src/main/default/objects/Ticket_Item__c/fields/Item_Code__c.field-meta.xml
<CustomField>
    <fullName>Item_Code__c</fullName>
    <description>The item code from the associated price list item and catalog item.</description>
    <inlineHelpText>Catalog item code for the ticket item. The ticket item inherits this item code from the linked catalog item.</inlineHelpText>
    <label>Item Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>