src/main/default/objects/Ticket_Item__c/fields/On_Standby__c.field-meta.xml
<CustomField>
    <fullName>On_Standby__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, the ticket item is on standby for a job and not in use. When a ticket item is on standby, the price charged for the item is the standby price inherited from the linked price book item.</inlineHelpText>
    <label>On Standby</label>
    <type>Checkbox</type>
</CustomField>