src/main/default/objects/Ticket_Item__c/fields/Override__c.field-meta.xml
<CustomField>
    <fullName>Override__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Override</label>
    <referenceTo>Override__c</referenceTo>
    <relationshipLabel>Ticket Items</relationshipLabel>
    <relationshipName>Ticket_Items</relationshipName>
    <type>Lookup</type>
</CustomField>