src/main/default/objects/Ticket_Item__c/fields/Parent_Ticket_Item__c.field-meta.xml
<CustomField>
    <fullName>Parent_Ticket_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Parent ticket item for the ticket item. When a ticket item has a parent, the parent gets added automatically to every ticket where the ticket item is added.</inlineHelpText>
    <label>Parent Ticket Item</label>
    <referenceTo>Ticket_Item__c</referenceTo>
    <relationshipLabel>Ticket Items</relationshipLabel>
    <relationshipName>Ticket_Items</relationshipName>
    <type>Lookup</type>
</CustomField>