src/main/default/objects/Ticket_Item__c/fields/PBI_Default_Quantity__c.field-meta.xml
<CustomField>
    <fullName>PBI_Default_Quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>Default quantity added when adding the item to a ticket. The ticket item inherits this default quantity from the linked price book item.</inlineHelpText>
    <label>PBI Default Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>