src/main/default/objects/Ticket_Item__c/fields/PBI_Enable_Dynamic_Parenting__c.field-meta.xml
<CustomField>
    <fullName>PBI_Enable_Dynamic_Parenting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PBI Enable Dynamic Parenting</label>
    <type>Checkbox</type>
</CustomField>