src/main/default/objects/Ticket_Item__c/fields/PBI_Locked_Description__c.field-meta.xml
<CustomField>
    <fullName>PBI_Locked_Description__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is checked, the user cannot change the description when the price book item is used on a ticket.</description>
    <inlineHelpText>If selected, users cannot change the catalog description for the ticket item.</inlineHelpText>
    <label>PBI Locked Description</label>
    <type>Checkbox</type>
</CustomField>