src/main/default/objects/Ticket_Item__c/fields/PBI_Minimum_Charge__c.field-meta.xml
<CustomField>
    <fullName>PBI_Minimum_Charge__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Minimum price that users can charge for the ticket item. The ticket item inherits this price from the linked price book item.</inlineHelpText>
    <label>PBI Minimum Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>