src/main/default/objects/Ticket_Item__c/fields/PBI_Minimum_Quantity__c.field-meta.xml
<CustomField>
    <fullName>PBI_Minimum_Quantity__c</fullName>
    <inlineHelpText>Minimum quantity of the item that users can add to a ticket. The ticket item inherits this quantity from the linked price book item.</inlineHelpText>
    <label>PBI Minimum Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>