src/main/default/objects/Ticket_Item__c/fields/PBI_Override_Cost_Method__c.field-meta.xml
<CustomField>
    <fullName>PBI_Override_Cost_Method__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PBI Override Cost Method</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Override_Config__c.Override_Type__c</field>
            <operation>equals</operation>
            <value>Cost</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Override_Config__c</referenceTo>
    <relationshipLabel>Ticket Items (PBI Override Cost Method)</relationshipLabel>
    <relationshipName>Ticket_Items_Cost_Override</relationshipName>
    <type>Lookup</type>
</CustomField>