src/main/default/objects/Ticket_Item__c/fields/PBI_Override_Price_Method__c.field-meta.xml
<CustomField>
    <fullName>PBI_Override_Price_Method__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PBI Override Price Method</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Override_Config__c.Override_Type__c</field>
            <operation>equals</operation>
            <value>Price</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Override_Config__c</referenceTo>
    <relationshipLabel>Ticket Items - Price Override Config</relationshipLabel>
    <relationshipName>Ticket_Items_Price_Override</relationshipName>
    <type>Lookup</type>
</CustomField>