src/main/default/objects/Ticket_Item__c/fields/PBI_Pricing_Method__c.field-meta.xml
<CustomField>
    <fullName>PBI_Pricing_Method__c</fullName>
    <inlineHelpText>Pricing method used for the ticket item. The ticket item inherits this pricing method from the linked price book item.</inlineHelpText>
    <label>PBI Pricing Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Straight Price</fullName>
            </value>
            <value>
                <fullName>Cost Plus Markup Percent</fullName>
            </value>
            <value>
                <fullName>Cost Plus Markup Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>