src/main/default/objects/Ticket_Item__c/fields/PBI_Surcharge_Env__c.field-meta.xml
<CustomField>
    <fullName>PBI_Surcharge_Env__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, the ticket item has a surcharge for environmental cleanup costs. The surcharge displays in the "Surcharge Rate Env" field.</inlineHelpText>
    <label>PBI Surcharge Env</label>
    <type>Checkbox</type>
</CustomField>