src/main/default/objects/Ticket_Item__c/fields/PBI_Surcharge_Fuel__c.field-meta.xml
<CustomField>
    <fullName>PBI_Surcharge_Fuel__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, the ticket item has a surcharge for fuel costs. The surcharge displays in the "Surcharge Rate Fuel" field.</inlineHelpText>
    <label>PBI Surcharge Fuel</label>
    <type>Checkbox</type>
</CustomField>