src/main/default/objects/Ticket_Item__c/fields/Price_Book_Item__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Item__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The price book item on which this ticket item was created.</description>
    <inlineHelpText>Price book item linked to the ticket item. The ticket item inherits pricing information from the linked price book item.</inlineHelpText>
    <label>Price Book Item</label>
    <referenceTo>Price_Book_Item__c</referenceTo>
    <relationshipLabel>Ticket Items</relationshipLabel>
    <relationshipName>Ticket_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>