src/main/default/objects/Ticket_Item__c/fields/Quote_Item__c.field-meta.xml
<CustomField>
    <fullName>Quote_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Item</label>
    <referenceTo>Quote_Item__c</referenceTo>
    <relationshipLabel>Ticket Items</relationshipLabel>
    <relationshipName>Ticket_Items</relationshipName>
    <type>Lookup</type>
</CustomField>