src/main/default/objects/Ticket_Item__c/fields/Rule_Required_Item__c.field-meta.xml
<CustomField>
    <fullName>Rule_Required_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will indicate that the item is required by the rule engine.</description>
    <inlineHelpText>This field will indicate that the item is required by the rule engine.</inlineHelpText>
    <label>Rule Required Item</label>
    <type>Checkbox</type>
</CustomField>