src/main/default/objects/Ticket_Item__c/fields/Standby_Price__c.field-meta.xml
<CustomField>
    <fullName>Standby_Price__c</fullName>
    <inlineHelpText>Price charged for the ticket item when it is on standby for a job and not in use. The ticket item inherits this price from the linked price book item.</inlineHelpText>
    <label>Standby Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>