src/main/default/objects/Ticket_Item__c/fields/Surcharge_Rate_Fuel__c.field-meta.xml
<CustomField>
    <fullName>Surcharge_Rate_Fuel__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Surcharge applied to cover fuel costs. The ticket item inherits this surcharge from the linked price book item.</inlineHelpText>
    <label>Surcharge Rate Fuel</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>