src/main/default/objects/Ticket_Item__c/fields/Unstaged_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Unstaged_Total_Price__c</fullName>
    <inlineHelpText>Undiscounted price for all items included in the stage.</inlineHelpText>
    <label>Unstaged Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>