src/main/default/objects/Ticket_Item__c/recordTypes/Equipment.recordType-meta.xml
<RecordType>
    <fullName>Equipment</fullName>
    <active>true</active>
    <label>Equipment</label>
</RecordType>