src/main/default/objects/Ticket_Item__c/recordTypes/Serialized_Equipment.recordType-meta.xml
<RecordType>
    <fullName>Serialized_Equipment</fullName>
    <active>false</active>
    <description>This is equipment with a required serial number</description>
    <label>Serialized Equipment</label>
</RecordType>