src/main/default/objects/Ticket_Item__c/recordTypes/Services.recordType-meta.xml
<RecordType>
    <fullName>Services</fullName>
    <active>true</active>
    <label>Services</label>
</RecordType>