src/main/default/objects/Ticket_Item__c/recordTypes/Supplies.recordType-meta.xml
<RecordType>
    <fullName>Supplies</fullName>
    <active>true</active>
    <label>Supplies</label>
</RecordType>