src/main/default/objects/Ticket_Item__c/validationRules/JobPriceBook.validationRule-meta.xml
<ValidationRule>
    <fullName>JobPriceBook</fullName>
    <active>true</active>
    <errorConditionFormula>Price_Book_Item__r.Price_Book__c   &lt;>   Ticket__r.Job__r.Price_Book__c</errorConditionFormula>
    <errorMessage>The Item must be from the Job Price Book. Please use Ticket Item Builder to add new Ticket Item.</errorMessage>
</ValidationRule>