src/main/default/objects/Ticket_Item__c/validationRules/Locked_Description.validationRule-meta.xml
<ValidationRule>
    <fullName>Locked_Description</fullName>
    <active>true</active>
    <errorConditionFormula>AND(PBI_Locked_Description__c , ISCHANGED(Description__c))</errorConditionFormula>
    <errorDisplayField>Description__c</errorDisplayField>
    <errorMessage>Cannot change the description as it is locked.</errorMessage>
</ValidationRule>