src/main/default/objects/Ticket_Item__c/validationRules/Locked_Discount.validationRule-meta.xml
<ValidationRule>
    <fullName>Locked_Discount</fullName>
    <active>true</active>
    <errorConditionFormula>AND(PBI_Locked_Discount__c , ISCHANGED(Discount_Percent__c))</errorConditionFormula>
    <errorDisplayField>Discount_Percent__c</errorDisplayField>
    <errorMessage>Cannot change the discounted percent as the discount is locked.</errorMessage>
</ValidationRule>