src/main/default/objects/Ticket_Item__c/validationRules/Locked_Price.validationRule-meta.xml
<ValidationRule>
    <fullName>Locked_Price</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(PBI_Locked_Price_Markup__c , On_Standby__c), ISCHANGED(Price__c))</errorConditionFormula>
    <errorDisplayField>Price__c</errorDisplayField>
    <errorMessage>Cannot change the price as it is locked or the item is on standby pricing.</errorMessage>
</ValidationRule>