src/main/default/objects/Ticket_Item__c/validationRules/Locked_StandbyPrice.validationRule-meta.xml
<ValidationRule>
    <fullName>Locked_StandbyPrice</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(NOT(On_Standby__c),PBI_Locked_Price_Markup__c), ISCHANGED( Standby_Price__c ))</errorConditionFormula>
    <errorDisplayField>Standby_Price__c</errorDisplayField>
    <errorMessage>Cannot change the standby price as it is locked or the item is not on standby pricing.</errorMessage>
</ValidationRule>