src/main/default/objects/Ticket_Item__c/validationRules/Minimum_Quantity.validationRule-meta.xml
<ValidationRule>
    <fullName>Minimum_Quantity</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(Input_Qty__c), AND(NOT( ISNULL(PBI_Minimum_Quantity__c)), Input_Qty__c &lt; PBI_Minimum_Quantity__c))</errorConditionFormula>
    <errorDisplayField>Input_Qty__c</errorDisplayField>
    <errorMessage>The input quantity must be greater than or equal to the minimum quantity.</errorMessage>
</ValidationRule>