src/main/default/objects/Ticket_Item__c/validationRules/TicketItemDateValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>TicketItemDateValidation</fullName>
    <active>true</active>
    <description>The start date should never be after the end date.</description>
    <errorConditionFormula>Date_Start__c > Date_End__c</errorConditionFormula>
    <errorMessage>The end date must follow the start date.</errorMessage>
</ValidationRule>